--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -24,7 +24,7 @@
                 立即购买
             </a> -->
             <% if @recital.sold_out? %>
-                <button class="btn-buy-buy-buy align-center" disabled="true">已售完</button>
+                <%= link_to '已售完', recital_areas_path(@recital), class: 'btn-buy-buy-buy align-center' %>
             <% else %>
                 <%= link_to '查看座位图', recital_areas_path(@recital), :class => 'btn-buy-buy-buy align-center' %>
             <% end %>
