Going reactive for seats.

--- a/app/views/areas/show.html.erb
+++ b/app/views/areas/show.html.erb
@@ -41,6 +41,8 @@
 </div>
 <% end %>
 
+<%= react_component('SeatChooser', :target => 'chengdu') %>
+
 <% content_for :header_class do %>continuous<% end %>
 <% content_for :breadcumb do %>
 <ul class="nav-bar float-left nav-breadcumb">
