--- a/app/assets/stylesheets/seat.scss
+++ b/app/assets/stylesheets/seat.scss
@@ -35,12 +35,6 @@
         border-radius: 1px;
         margin: 1em 2px;
     }
-    .seat-row {
-        padding: 2px 0;
-        & + .seat-row {
-            /* border-top: 1px dotted $lighter-10; */
-        }
-    }
 }
 
 .seat {
@@ -66,31 +60,55 @@
     }
     label {
         display: inline-block;
-        width: 1.7em;
-        height: 2.3em;
-        line-height: 2.3em;
-        background-color: #ddc;
-        border-radius: 4px 4px 8px 8px;
+        width: 1.3em;
+        height: 1.3em;
+        line-height: 0;
+        background-color: #ccc; // #ddc;
+        border-radius: 2px 2px 2px 2px;
         cursor: pointer;
-        border: 1px solid gray;
-        box-shadow: 0 0 2px white inset, 1px 1px 0.5em black;
-        margin: 0 0.2em;
-        transition: all 0.3s ease-in-out;
-        
-        &:after {
-            content: '';
-            display: inline-block;
-            position: relative;
-            width: 1.7em;
-            height: 0.6em;
-            padding: 0 0.3em;
-            right: 0.3em;
-            border-radius: 1px;
-            background-color: inherit;
-            vertical-align: bottom;
-            box-shadow: 0 0 1px 1px $darken-40;
-        }
+        // border: 1px solid gray;
+        // box-shadow: 0 0 2px white inset, 1px 1px 0.5em black;
+        margin: 0.2em 0.2em;
+        transition: all 0.2s ease-in-out;
+        box-sizing: border-box;
     }
+}
+
+.seat.seat-p680 label {
+    background-color: #f00;
+}
+.seat.seat-p580 label {
+    background-color: #0f0;
+}
+.seat.seat-p480 label {
+    background-color: #00f;
+}
+.seat.seat-p380 label {
+    background-color: #ff0;
+}
+.seat.seat-p280 label {
+    background-color: #0ff;
+}
+.seat.seat-p180 label {
+    background-color: #f0f;
+}
+
+.seat-row {
+    line-height: 0;
+}
+
+.seat-placeholder {
+    display: inline-block;
+    width: 1.3em;
+    height: 1.3em;
+    margin: 0.2em 0.2em;
+}
+
+.seat-placeholder-stage {
+    display: inline-block;
+    width: 1.7em;
+    height: 1.7em;
+    background-color: #888;
 }
 
 .seat-opbar {
