--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -1,6 +1,7 @@
 
 @import 'mqp';
 @import 'cd';
+@import 'essential';
 
 ul.order-list {
     list-style: none;
@@ -10,68 +11,88 @@ ul.order-list {
         border-radius: 0;
     }
     & > li.order {
-        margin-bottom: 1em;
+        margin-bottom: 2em;
+		&:last-child { margin-bottom: 1em; }
+
         .order-bar-table {
-            text-shadow: 0px 1px 1px black;
-            border: 2px solid #999;
+            text-shadow: 0px 1px 4px $darken-30;
+            // border: 1px solid $lighter-30;
+			border: 1px solid $darken-10;
             width: 100%;
             border-collapse: separate;
+			background: #50545D;
             table-layout: fixed;
-            
+			color: #ddd;
+			box-shadow: 0 1px 7px $darken-30;
+
+			@include media-mobile {
+				border-left: none !important;
+				border-right: none !important;
+			}
+
             tr:first-child > td { padding-top: 0.3em; }
             tr:last-child > td { padding-bottom: 0.3em; }
+
             &.order-header {
                 border-radius: 4px 4px 0 0;
-                background-image: linear-gradient(180deg, #505057 0%, #313136 100%);
-                box-shadow: 1px 1px 2px $lighter-20 inset;
+				border-bottom: none;
+                /*background-image: linear-gradient(180deg, #505057 0%, #313136 100%);*/
+                /*box-shadow: 1px 1px 2px $lighter-20 inset;*/
+				@include media-mobile { border-radius: 0; }
             }
             &.order-footer {
                 border-radius: 0 0 4px 4px;
-                background-image: linear-gradient(176deg, #505057 0%, #313136 100%);
-                box-shadow: -1px -1px 2px $darken-30 inset, 1px 2px 1em $darken-30;
+				border-top: none;
+                /*background-image: linear-gradient(176deg, #505057 0%, #313136 100%);*/
+                /*box-shadow: -1px -1px 2px $darken-30 inset, 1px 2px 1em $darken-30;*/
+				@include media-mobile { border-radius: 0; }
             }
+
             .order-bar-info-status {
                 font-size: large; }
             .order-bar-info-id {
-                color: #aaa;
+                color: #ccc;
             }
             .order-bar-detail-button {
                 border-radius: 2px;
                 padding: 0.15em 0.4em;
-                background-color: #323236;
-                background: linear-gradient(to bottom, #404144 0%, #303236 100%);
-                border: 1px solid #45474a;
-                color: #aaa;
-                box-shadow: 0 0 3px #111, 1px 1px 1px #555 inset;
-            }
-            @include mq($until: tablet) {
-                border: none; }
-        }
-        
-        .order-item-table {
-            border: 2px solid #aaa;
-            background-color: #ccc;
-            box-shadow: 1px 2px 3px $darken-30 inset;
-            color: #666;
-            width: 100%;
-            margin: -2px 0;
-            
-            @include mq($until: tablet) {
+				background: $darken-10;
                 border: none;
-                margin: 0;
+                color: #fff;
+				box-shadow: none;
             }
+        }
+
+        .order-item-table {
+            // border-left: 1px solid $lighter-30;
+            // border-right: 1px solid $lighter-30;
+            border-left: 1px solid $darken-10;
+            border-right: 1px solid $darken-10;
+			background: #72777E;
+            color: #ccc;
+			box-shadow: 0 0 1em $darken-20 inset;
+            width: 100%;
+			margin: -1px 0;
+
+			@include media-mobile {
+				border: none !important; }
+
             & .order-item {
                 & + .order-item {
                     border-top: 1px dotted #999; }
                 td { padding: 1em; }
             }
         }
-        @include mq($from: tablet) {
-            &:hover {
-                .order-bar, .order-bar-table { border: 2px solid #ddd; }
-                .order-item-table { border: 2px solid #ddd; }
-            }
-        }
-        
+
+		&:hover {
+			.order-bar, .order-bar-table {
+				// border: 1px solid $lighter-50;
+			}
+			.order-item-table {
+				// border-left: 1px solid $lighter-50;
+				// border-right: 1px solid $lighter-50;
+			}
+		}
+
     }
 }
