--- a/app/views/admin/videos/show.html.erb
+++ b/app/views/admin/videos/show.html.erb
@@ -36,4 +36,12 @@ as well as a link to its edit page.
     <dd class="attribute-data attribute-data--<%=attribute.html_class%>"
         ><%= render_field attribute %></dd>
   <% end %>
+  <dt class="attribute-label">视频截图</dt>
+  <dd class="attribute-data">
+    <%= image_tag page.resource.screenshot.url, width: '300' %>
+    <%= form_for [Administrate::NAMESPACE, page.resource] do |f| %>
+      <%= f.file_field :venue_image %>
+      <%= f.submit value: '更新视频截图' %>
+    <% end %>
+  </dd>
 </dl>
