--- a/app/assets/stylesheets/order.scss
+++ b/app/assets/stylesheets/order.scss
@@ -1,6 +1,7 @@
 
 @import 'mqp';
 @import 'cd';
+@import 'essential';
 
 .order-detail-cont {
     // background-color: $color1;
@@ -29,24 +30,6 @@
         height: 1px;
     }
 
-    .order-detail {
-        border-left: 1px solid $darken-5;
-        border-right: 1px solid $darken-5;
-        text-align: left;
-        padding: 0 1em;
-
-        ul.order-item-list {
-            padding: 0;
-            // list-style: none;
-            margin-left: 1em;
-            li.order-item {
-
-            }
-        }
-
-        .order-address-cont {
-            margin: 0 -2em; }
-    }
 }
 
 .order-dotted { font-family: 'Animenz-Dotted'; }
@@ -58,17 +41,23 @@
         font-size: 1.2rem;
         width: 100%;
         margin: 0;
-        padding: 0.3em 2.5em;
+        padding: 0.3em 0.8em;
         position: relative;
-        left: -2.5em;
-        color: #cfcfcf;
-        text-shadow: 0 1px 1px #111;
-        border-top: 1px solid #363636;
-        border-bottom: 1px solid #202020;
-        background: #333;
-        background: linear-gradient(to bottom, #444 0%, #333 100%);
+        left: -0.8em;
+        color: white;
+        text-align: center;
+
+        text-shadow: 1px 2px 0 $darken-40;
+        // border-top: 1px solid #363636;
+        // border-bottom: 1px solid #202020;
+        // background: #333;
+        // background: linear-gradient(to bottom, #444 0%, #333 100%);
+        // box-shadow: 0 2px 0.5em $darken-40, 1px 1px 1px $lighter-10 inset;
         border-radius: 3px 3px 0 0;
-        box-shadow: 0 2px 0.5em $darken-40, 1px 1px 1px $lighter-10 inset;
+		// background: #D3C58F;
+		background: rgba(69, 144, 148, 0.9);
+
+		box-shadow: 3px 7px 0 $darken-30;
 
         &::before, &::after {
             content: '';
@@ -84,4 +73,40 @@
         &::before { left: 0; }
         &::after { right: 0; }
     }
+}
+
+// stackoverflow.com/questions/20532575/two-column-layout-fixed-right-column css - Two column layout, fixed right column - Stack Overflow
+.order-left {
+	float: left;
+	width: 100%;
+
+	.order-left-content {
+		margin-right: 320px;
+        padding: 0 1em 1em 1em;
+
+		@include media-mobile {
+			margin: 0;
+		}
+	}
+
+	@include media-mobile {
+		float: none;
+	}
+}
+
+.order-right {
+	float: right;
+	width: 320px;
+	margin-left: -320px;
+
+	box-sizing: border-box;
+	padding: 0 0 0 1em;
+
+	@include media-mobile {
+		margin: 1em 0 0 0;
+		width: auto;
+		float: none;
+		padding: 0;
+	}
+
 }
