Update devise pages.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="outer-container align-center">
+<div class="outer-container align-center dark-panel">
   <h2>注册</h2>
   <hr />
   <%= devise_error_messages! %>
