--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="outer-container">
+<div class="outer-container dark-panel">
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :role => 'form', :class => 'profile-form align-center'}) do |f| %>
 
     <h2>用户信息</h2>
