--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -11,6 +11,7 @@
         </div>
         <div class="area-list-cont">
             <ul class="area-list">
+            <% if false %>
                 <% @areas.each_with_index do |area, index| %>
                     <li>
                         <%= link_to recital_area_path(@recital, area), :class => "area-list-item" do %>
@@ -18,6 +19,7 @@
                         <% end %>
                     </li>
                 <% end %>
+            <% end %>
             </ul>
         </div>
     </div>
