Update recital slug. Update seat dashboard

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -6,7 +6,7 @@
                 <table class="order-header order-bar-table">
                     <tr>
                         <td>下单日期</td>
-                        <td rowspan="2"  class="order-bar-info-status"><strong><%= order.get_status %></strong></td>
+                        <td rowspan="2"  class="order-bar-info-status"><strong><%= I18n.t order.status %></strong></td>
                         <td>总金额</td>
                     </tr>
                     <tr>
