--- a/app/assets/stylesheets/rx.scss
+++ b/app/assets/stylesheets/rx.scss
@@ -1,6 +1,34 @@
+@import "cd";
+@import "essential";
+
+.rx-seatchooser {
+    &.seat-too-much {
+        label.seat-label {
+            pointer-events: none;
+            cursor: not-allowed;
+            opacity: 0.5;
+        }
+        input[type="checkbox"]:checked + label.seat-label {
+            pointer-events: auto;
+            cursor: pointer;
+            opacity: 1.0;
+        }
+    }
+}
+
 .rx-seatchooser-floor-cont {
+
+    margin: 0.5em;
+    padding: 0.5em 0;
+    border-radius: 0.5em;
+    background-color: $darken-20;
+    overflow-x: auto;
+    overflow-y: hidden;
     
-    overflow: auto;
+    @include media-mobile {
+        border-radius: 0;
+        margin: 0.5em 0;
+    }
     
     &.rx-seatchooser-floor-cont-hide {
         display: none;
@@ -8,13 +36,15 @@
     
     .rx-seatchooser-floor {
         white-space: nowrap;
+        text-align: center;
     }
 }
 
 ul.rx-tabs {
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     
     border: 1px solid white;
     
