--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -14,7 +14,7 @@ and renders all form fields for a resource's editable attributes.
 [1]: http://www.rubydoc.info/gems/administrate/Administrate/Page/Form
 %>
 
-<%= form_for([Administrate::NAMESPACE, page.resource], html: { class: "form" }) do |f| %>
+<%= form_for([namespace, page.resource], html: { class: "form" }) do |f| %>
   <% if page.resource.errors.any? %>
     <div id="error_explanation">
       <h2>
@@ -30,13 +30,11 @@ and renders all form fields for a resource's editable attributes.
     </div>
   <% end %>
 
-  <div class="form-inputs">
-    <% page.attributes.each do |attribute| -%>
-      <div class="form-field form-field--<%= attribute.html_class %>">
-        <%= render_field attribute, f: f %>
-      </div>
-    <% end -%>
-  </div>
+  <% page.attributes.each do |attribute| -%>
+    <div class="field-unit field-unit--<%= attribute.html_class %>">
+      <%= render_field attribute, f: f %>
+    </div>
+  <% end -%>
 
   <div class="form-actions">
     <%= f.submit %>
