--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -15,14 +15,14 @@ It displays a header, and renders the `_form` partial to do the heavy lifting.
 [1]: http://www.rubydoc.info/gems/administrate/Administrate/Page/Form
 %>
 
-<% content_for(:title) { "编辑 #{page.page_title}" } %>
+<% content_for(:title) { "Edit #{page.page_title}" } %>
 
 <header class="header">
-  <h1 class="header-heading"><%= content_for(:title) %></h1>
-  <div class="header-actions">
+  <h1 class="header__heading"><%= content_for(:title) %></h1>
+  <div class="header__actions">
     <%= link_to(
-      "显示 #{page.page_title}",
-      [Administrate::NAMESPACE, page.resource],
+      "Show #{page.page_title}",
+      [namespace, page.resource],
       class: "button",
     ) %>
   </div>
