--- a/app/views/admin/recitals/new.html.erb
+++ b/app/views/admin/recitals/new.html.erb
@@ -18,9 +18,9 @@ to do the heavy lifting.
 <% content_for(:title) { "New #{page.resource_name.titleize}" } %>
 
 <header class="header">
-  <h1 class="header-heading"><%= content_for(:title) %></h1>
-  <div class="header-actions">
-    <%= link_to '后退', :back, class: "button" %>
+  <h1 class="header__heading"><%= content_for(:title) %></h1>
+  <div class="header__actions">
+    <%= link_to 'Back', :back, class: "button" %>
   </div>
 </header>
 
