--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -19,11 +19,11 @@ as well as a link to its edit page.
 <% content_for(:title) { page.page_title } %>
 
 <header class="header">
-  <h1 class="header-heading"><%= content_for(:title) %></h1>
-  <div class="header-actions">
+  <h1 class="header__heading"><%= content_for(:title) %></h1>
+  <div class="header__actions">
     <%= link_to(
-      "编辑",
-      [:edit, Administrate::NAMESPACE, page.resource],
+      "Edit",
+      [:edit, namespace, page.resource],
       class: "button",
     ) %>
   </div>
@@ -40,7 +40,7 @@ as well as a link to its edit page.
   <dt class="attribute-label">Thumb</dt>
   <dd class="attribute-data">
     <%= image_tag page.resource.avatar.url(:medium) %>
-    <%= form_for [Administrate::NAMESPACE, page.resource] do |f| %>
+    <%= form_for [namespace, page.resource] do |f| %>
       <%= f.file_field :avatar %>
       <%= f.submit value: '更新头像' %>
     <% end %>
