--- a/app/views/admin/videos/new.html.erb
+++ b/app/views/admin/videos/new.html.erb
@@ -15,12 +15,12 @@ to do the heavy lifting.
 [1]: http://www.rubydoc.info/gems/administrate/Administrate/Page/Form
 %>
 
-<% content_for(:title) { "新增 #{page.resource_name.titleize}" } %>
+<% content_for(:title) { "New #{page.resource_name.titleize}" } %>
 
 <header class="header">
-  <h1 class="header-heading"><%= content_for(:title) %></h1>
-  <div class="header-actions">
-    <%= link_to '后退', :back, class: "button" %>
+  <h1 class="header__heading"><%= content_for(:title) %></h1>
+  <div class="header__actions">
+    <%= link_to 'Back', :back, class: "button" %>
   </div>
 </header>
 
