Use unravel as title video

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -85,7 +85,7 @@
         <div class="index-videos clearfix">
             <div class="index-video-item-cont">
                 <div class="index-video-item">
-                    <%= link_to '#' do %><%= image_tag 'video_areuok.jpg' %><% end %>
+                    <%= link_to '#' do %><%= image_tag @titleVideo.screenshot.url(:large) %><% end %>
                     <div class="index-video-title">
                         Are you OK?
                         <div class="index-video-time">
