--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -69,7 +69,7 @@
     <div class="outer-container clearfix">
         <div class="index-intro-video-cont">
             <div class="index-intro-video">
-                <%= link_to '#' do %><%= image_tag 'video_areuok.jpg' %><% end %>
+                <%= link_to '#' do %><%= image_tag @indexVideo.screenshot.url(:large)  %><% end %>
             </div>
         </div>
         <div class="index-intro-text">
@@ -85,7 +85,7 @@
         <div class="index-videos clearfix">
             <div class="index-video-item-cont">
                 <div class="index-video-item">
-                    <%= link_to '#' do %><%= image_tag @titleVideo.screenshot.url(:large) %><% end %>
+                    <%= link_to '#' do %><%= image_tag 'video_areuok.jpg' %><% end %>
                     <div class="index-video-title">
                         Are you OK?
                         <div class="index-video-time">
