Use slug_candidates function

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -88,7 +88,7 @@
                 <div class="index-video-item">
                     <%= link_to '#' do %><%= image_tag video.screenshot.url(:medium) %><% end %>
                     <div class="index-video-title">
-                        <%= video.slug %>
+                        <%= video.slug_candidates %>
                         <div class="index-video-time">
                             <%= video.length %>
                         </div>
