Update footer and handle video name exception

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
 <footer>
 	<div class="footer">
 		<div class="float-left">© 2016 Animenz</div>
-        蜀ICP备16047394号-1
+        黔ICP备16001695号-1
 	</div>
 </footer>
 <!-- /.container -->
