Update Animenz intro

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -73,9 +73,16 @@
             </div>
         </div> 
         <div class="index-intro-text">
-由于Lambda表达式构造URL的速度不佳，我最近对于性能上的细节问题进行了一些探索和尝试。对于很多问题，以前由于不会形成性能瓶颈，因此并没有进行太多关注。还有一些问题可以“推断”出大致的结论，也趁这个机会进行更详细的试验，希望可以得到更为确切的结论和理性的认识。这次我打算做的实验，是关于对象的缓存与创建的性能比较。在某些情况下，我们会将创建好的对象缓存起来，以便今后进行复用。但是不同的缓存方式会有不同的性能，因此……我们现在便来试试看。
-
-值得注意的是，我们这里的“缓存”，只是为了复用而保存而已，并没有一些过期机制等复杂的要求——甚至来删除操作也没有，我们这里只关心“读”操作。
+            <section class="intro-paragraph">
+                <p>
+                动漫钢琴界的大神级人物，德国钢琴家Animenz出生于1991年，现在德国罗斯托克音乐学院攻读钢琴演奏硕士研究生学位。自从09年开始，Animenz开始从事动漫音乐的改编工作，至今已经有110多首成熟作品于网上公布，其中有很多作品点击率甚至超过百万，受到世界各地乐迷的追捧和喜爱，目前在YouTube上的订阅人数已经超过60万（现还在不断增加）。Animenz的世界巡演，于2013年正式开始，其中包括中国、日本、新加坡、马来西亚、美国、台湾、香港等多个国家和地区。
+                </p>
+            </section>
+            <section class="intro-paragraph">
+                <p>
+                Animenz的改编风格技巧高超，极其华丽辉煌且不失稳重与大气，除了重视作品的还原度之外还加入了非常多原创元素，如古典、爵士、摇滚、现代等风格信手拈来，毫无做作之感。在他的作品当中，时不时会发现李斯特、贝多芬、莫扎特、巴赫、肖邦、拉赫玛尼诺夫、斯克里亚宾、柴可夫斯基等作曲家的影子，但绝不是单纯地生搬硬套而已，他将所有的精华吸收，并将它们完美地融入自己的作品当中，编曲技巧之成熟，令人叹为观止！
+                </p>
+            </section>
         </div>
     </div>
 </div>
