--- a/app/assets/stylesheets/rx.scss
+++ b/app/assets/stylesheets/rx.scss
@@ -21,7 +21,7 @@
     margin: 0.5em;
     padding: 0.5em 0;
     border-radius: 0.5em;
-    background-color: $darken-20;
+    background-color: #263238;
     overflow-x: auto;
     overflow-y: hidden;
     
