--- a/app/assets/stylesheets/seat.scss
+++ b/app/assets/stylesheets/seat.scss
@@ -51,8 +51,8 @@
             pointer-events: none;
         }
         &:checked + label, &.seat-checked + label {
-            background-color: #9ff5e8;
-            box-shadow: 0 0 1em $lighter-50;
+            background-color: #FFCDD2;
+            box-shadow: 0 0 1em $lighter-50, 0 0 0 1px #26A69A;
         }
         
     }
@@ -76,22 +76,22 @@
 }
 
 .seat.seat-p680 label {
-    background-color: #f00;
+    background-color: #F06292;
 }
 .seat.seat-p580 label {
-    background-color: #0f0;
+    background-color: #BA68C8;
 }
 .seat.seat-p480 label {
-    background-color: #00f;
+    background-color: #7986CB;
 }
 .seat.seat-p380 label {
-    background-color: #ff0;
+    background-color: #4DD0E1;
 }
 .seat.seat-p280 label {
-    background-color: #0ff;
+    background-color: #00897B;
 }
 .seat.seat-p180 label {
-    background-color: #f0f;
+    background-color: #8BC34A;
 }
 
 .seat-row {
@@ -109,7 +109,7 @@
     display: inline-block;
     width: 1.7em;
     height: 1.7em;
-    background-color: #888;
+    background-color: #795548;
 }
 
 .seat-opbar {
