Add index animenz image

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -68,7 +68,7 @@
 <div class="section-intro">
     <div class="outer-container clearfix">
         <div class="index-intro-image-cont">
-            <%= image_tag @indexVideo.screenshot.url(:large), :class => 'index-intro-image' %>
+            <%= image_tag 'index-animenz.png', :class => 'index-intro-image' %>
         </div>
         <div class="index-intro-text">
             <section class="intro-paragraph">
