--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -36,6 +36,7 @@
 	position: absolute;
     text-align: center;
 
+    -webkit-transition: -webkit-transform 0.25s ease-in-out;
 	transition: transform 0.25s ease-in-out;
 
     .coverflow-card {
