--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -21,7 +21,7 @@
 	position: relative;
 	margin: 0 auto;
 
-	/*transform-style: preserve-3d;*/
+	// transform-style: flat;
 	perspective: 600px;
 }
 
