--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,7 +6,7 @@
 
                 <div class="ribbon">
                     <div class="ribbon-title font-bold">
-                        <span class="right-floated font-larger"><%= @order.get_status %></span>
+                        <span class="right-floated font-larger"><%= I18n.t(@order.status) %></span>
                         <div>
                             <span class="order-dotted">l3UmeTpjFw1qxt9l</span>
                         </div>
